tests/snapshots/integration_stats__projects_json.snap
---
source: tests/integration_stats.rs
expression: projects
---
{
  "data": [
    {
      "count": 4,
      "project": "<TEMPDIR>"
    }
  ],
  "filters": {
    "projects": [],
    "since": null,
    "until": null
  },
  "period": {
    "end": "<TS>",
    "start": "<TS>"
  },
  "query": "projects",
  "skill": "test-skill",
  "skill_path": "<TEMPDIR>/.skillc/skills/test-skill"
}
